changing the open feedback to make it a link and removing the functions since they are not used anymore

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -238,8 +238,10 @@
 		<span data-ng-bind="lastSaved"></span>
 	</p>
 
-	<p class="feedback" data-ng-click="openFeedback()">
-		Need help?
+	<p class="feedback">
+		<a href="http://talk.scripler.com/" target="_blank">
+			Need help?
+		</a>
 	</p>
 </div>
 
