--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -239,7 +239,7 @@
 	</p>
 
 	<p class="feedback">
-		<a href="http://talk.scripler.com/" target="_blank">
+		<a href="http://talk.scripler.com/" target="_blank" class="link-underline">
 			Need help?
 		</a>
 	</p>
@@ -360,23 +360,23 @@
 	<div class="menu-item-right" data-ng-show="rightMenuShowItem == 'publish'">
 		<ul>
 			<li class="menu-item-background">
-				<div class="menu-box label text-align-center" data-ng-show="project.publish.image">
+				<div class="text-align-center" data-ng-show="project.publish.image">
 					<a data-ng-href="{{project.publish.url}}" target="_blank">
 						<img style="border: 1px solid black;" data-ng-src="{{project.publish.image}}" height="120" alt="Cover" />
 					</a>
 				</div>
-				<div class="menu-box label text-align-center text-decoration-bold">
+				<div class="margin-top text-align-center text-decoration-bold">
 					<a data-ng-href="{{project.publish.url}}" target="_blank">
 						{{ project.metadata.title }}
 					</a>
 				</div>
-				<div class="menu-box label text-align-center" data-ng-show="project.publish.url">
-					<a data-ng-href="{{project.publish.url}}" target="_blank">
+				<div class="text-align-center" data-ng-show="project.publish.url">
+					<a data-ng-href="{{project.publish.url}}" target="_blank" class="link-underline">
 						View your book
 					</a>
 				</div>
 
-				<div class="menu-box label margin-top">Status</div>
+				<div class="margin-top">Status</div>
 				<div class="menu-status" data-ng-hide="project.publish.url">Not published</div>
 				<div class="menu-status published" data-ng-show="project.publish.url">
 					<div>Published</div>
@@ -400,7 +400,7 @@
 				</div>
 				<div class="menu-box label desc margin-top">
 					<div class="menu-feature-title">Publish</div>
-					<div>Publish <strong><em>{{ project.metadata.title }}</em></strong> directly on the web. Anyone can read it. When published you can unpublish or update to the latest version.<br>To publish to ebook stores like the Amazon Kindle Store, <a href="http://talk.scripler.com/t/official-scripler-faq/109#q8" target="_blank">see this</a>.</div>
+					<div>Publish <strong><em>{{ project.metadata.title }}</em></strong> directly on the web. Anyone can read it. When published you can unpublish or update to the latest version.<br>To publish to ebook stores like the Amazon Kindle Store, <a href="http://talk.scripler.com/t/official-scripler-faq/109#q8" target="_blank" class="link-underline">see this</a>.</div>
 				</div>
 			</li>
 		</ul>
