changing to use the same image folder instead of two different folders

--- a/public/index.html
+++ b/public/index.html
@@ -100,34 +100,34 @@
         <div class="col-xs-12 col-md-10 col-md-offset-1 ">
           <div class="col-xs-12 col-md-6">
             <div id="free" class="col-xs-12  pull-left features">
-              <img src="img/features/free.png" class="pull-left">
+              <img src="images/features/free.png" class="pull-left">
               <h3 class="feats">It’s free</h3>
               <p class="whiteFeats">With Scripler it‘s free to make ebooks. As in - it does not cost a thing. There are premium plans if you need more cloud storage, premium designs or if you want to make custom book-templates.</p>
             </div>
             <div id="functional" class="col-xs-12 pull-left features">
-              <img src="img/features/ebook.png" class="pull-left">
+              <img src="images/features/ebook.png" class="pull-left">
               <h3 class="feats">Fully functional ebooks</h3>
               <p class="whiteFeats">Scripler makes ebooks in EPUB format, the definitive international and open standard for ebooks. Easily insert frontmatter, backmatter and metadata. All elements are designed for the book-template you currently use.</p>
             </div>
             <div id="import" class="col-xs-12  pull-left features">
-              <img src="img/features/import.png" class="pull-left">
+              <img src="images/features/import.png" class="pull-left">
               <h3 class="feats">Import</h3>
               <p class="whiteFeats">Import your manuscript from Word. Just upload it and Scripler will convert it to a well-formatted book project, ready for polishing and final book production.</p>
             </div>
           </div>
           <div class="col-xs-12 col-md-6  ">
             <div id="many" class="col-xs-12  pull-right features">
-              <img src="img/features/many.png" class="pull-right-on-big-screen">
+              <img src="images/features/many.png" class="pull-right-on-big-screen">
               <h3 class="feats">Make as many books you like</h3>
               <p class="whiteFeats">No limit on the number of books you can make. Make 1000 books consisting only of a poem each. Make serial fiction and publish each chapter as an ebook or collect your creations in vast works of literature. Just experiment, go wild.</p>
             </div>
             <div id="rogd" class="col-xs-12  pull-right features">
-              <img src="img/features/togd.png" class="pull-right-on-big-screen">
+              <img src="images/features/togd.png" class="pull-right-on-big-screen">
               <h3 class="feats">Great typography and design</h3>
               <p class="whiteFeats">Make professionally designed typography with Scripler’s book-templates. You’ll have a wide selection of great fonts and full control of the typography. Easily insert images and figures.</p>
             </div>
             <div id="premium" class="col-xs-12  pull-right features">
-              <img src="img/features/premium.png" class="pull-right-on-big-screen">
+              <img src="images/features/premium.png" class="pull-right-on-big-screen">
               <h3 class="feats">Premium subscription for heavy users and professionals</h3>
               <p class="whiteFeats">As a premium subscriber you’ll have a wider range of professionally designed book-templates to choose from, more space for more books, as well as the ability to easily create and control your own custom book-templates.</p>
             </div>
