Removed Ioana & Ole from members, added Allan back again

--- a/public/index.html
+++ b/public/index.html
@@ -154,10 +154,6 @@
             Plays the saxophone (really poorly).
           </div>
           <div class=" col-xs-12 col-md-6 pers">
-            <a class="person" href="mailto:ole@scripler.com" class="email-text">Ole Sandbæk Jørgensen</a>, Developer<br />
-            Fanatic movie watcher. As long as I got my specs on, aye.
-          </div>
-          <div class=" col-xs-12 col-md-6 pers">
             <a  class="person" href="mailto:kaspar@scripler.com" class="email-text">Kaspar Sivertsen</a>, Graphic designer<br />
             Has no special characteristics whatsoever.
           </div>
@@ -166,8 +162,8 @@
             Is addicted to cinnamon and collects lamb-toys.
           </div>
           <div class=" col-xs-12 col-md-6 pers">
-            <a class="person"  href="mailto:ioana@scripler.com" class="email-text"> Ioana Grozav</a>, Developer<br />
-            Enjoys arguing on politics.
+            <a class="person" href="mailto:allan@scripler.com" class="email-text">Allan Mørk Christensen</a>, Developer<br />
+            Solves the Rubik’s Cube (very slowly).
           </div>
         </div>
       </div>
