cleaning up, removing files that were no longer in use

--- a/public/index.html
+++ b/public/index.html
@@ -78,19 +78,17 @@
         </div>
       </div>
       
-      <div class="row page " id="scripler">
-        <div class="testMain col-xs-12 center-block ">
-          <img src="img/logo.png" id="scriplerLogo" class="center-block">
-          <h2 id="makeGreat" class="text-center">Make great ebooks</h2>
+      <div class="row page" id="scripler">
+        <div class="col-xs-12 center-block">
+          <img src="images/logo.png" id="scriplerLogo" class="center-block">
+          <h2 class="text-center">Make great ebooks</h2>
           <h4 class="text-center">Scripler is an intuitive way to write and produce ebooks.</h4>
           <h4 class="text-center">Your books will be beautiful, fully functional and ready for distribution.</h4>
           <h4 class="text-center">Oh, and it’s free.</h4>
-          <div class="testBtn col-xs-12 text-center">
-            <div class="try-wrapper">
+          <div class="col-xs-12 text-center">
               <a href="create/">
                 <button type="button" id="testTheAlpha" class="button col-xs-8 col-md-4">Test the alpha!</button>
               </a>
-            </div>
           </div>
           <h4 class="text-center">Or <a href="#" id="signUp">sign up</a> for the newsletter..</h4>
         </div>
@@ -169,8 +167,8 @@
       </div>
      
       <div class="row page" id="contact">
-        <div class="col-xs-12 col-md-4 cont"  >
-          <h2 class="col-xs-12 text-center con"  >Contact</h2>
+        <div class="col-xs-12 col-md-4 cont">
+          <h2 class="col-xs-12 text-center con">Contact</h2>
           <h3  class="col-xs-12 text-center con">Ask us anything (about Scripler)</h3>
           <p class="text-center"><a class="person" href="mailto:david@scripler.com">David Walther Birk,  </a>Project Leader </p>
           <h3  class="col-xs-12 text-center con">Find us</h3>
