--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
                     <button type="button" class="button test-alpha">Start writing</button>
                 </a>
             </div>
-            <h4 class="text-center">Or <a href="#" id="signUp">sign up</a> for the newsletter..</h4>
+            <h4 class="text-center">Or <a href="#" id="signUp">sign up</a> for the newsletter.</h4>
         </div>
     </div>
     <div class="row page" id="features">
