Adding a !, it was missing for the button

--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
             <h4 class="text-center">Oh, and it’s free.</h4>
             <div class="text-center">
                 <a href="create/">
-                    <button type="button" class="button test-alpha">Start writing</button>
+                    <button type="button" class="button test-alpha">Start writing!</button>
                 </a>
             </div>
             <h4 class="text-center">Or <a href="#" id="signUp">sign up</a> for the newsletter.</h4>
