--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
                 <div class="login-main center-block text-center col-xs-12 col-md-10">
                     <input type="email" value="" name="login-email" class="col-xs-12 col-md-4 required email" id="login-email" placeholder="Email Address">
                     <input type="password" value="" name="login-password" class=" col-xs-12 col-md-4 required password" id="login-password" placeholder="Password">
-                    <input name="Login" type="submit" value="Login" class="btn loginBtn col-xs-12 col-md-2" id="login-button">
+                    <input name="Login" type="submit" value="Login" class="login-button col-xs-12 col-md-2" id="login-button">
                 </div>
                 <div id="login-extras" class=" center-block text-center col-xs-12 col-md-2 ">
                     <div id="fgpass" ><a id="forgot-password" href="#">Forgot password?</a></div>
@@ -86,106 +86,147 @@
         </div>
     </div>
 
-    <div class="row page" id="scripler">
-        <div class="col-xs-12 center-block">
-            <img src="images/logo.png" class="center-block scripler-logo">
-            <h2 class="text-center">Make great ebooks</h2>
-            <h4 class="text-center">Scripler is an intuitive way to write and produce ebooks.</h4>
-            <h4 class="text-center">Your books will be beautiful, fully functional and ready for distribution.</h4>
-            <h4 class="text-center">Oh, and it’s free.</h4>
-            <div class="text-center">
-                <a href="create/">
-                    <button type="button" class="button test-alpha">Start writing!</button>
-                </a>
+    <div class="row" id="scripler">
+        <div class="container">
+            <div class="col-xs-12 center-block">
+                <img src="images/logo.png" class="center-block scripler-logo">
+                <h3 class="text-center">Make great ebooks</h3>
+                <h4 class="text-center">Scripler is an intuitive way to write and produce ebooks.</h4>
+                <h4 class="text-center">Your books will be beautiful, fully functional and ready for distribution.</h4>
+                <h4 class="text-center">Oh, and it’s free.</h4>
+                <div class="text-center">
+                    <a href="create/">
+                        <button type="button" class="button test-alpha">Start writing!</button>
+                    </a>
+                </div>
+                <h4 class="text-center">Or <a href="#" id="signUp">sign up</a> for the newsletter.</h4>
             </div>
-            <h4 class="text-center">Or <a href="#" id="signUp">sign up</a> for the newsletter.</h4>
         </div>
     </div>
-    <div class="row page" id="features">
-        <h2 class="col-xs-12 text-center feat">Features</h2>
-        <div class="col-xs-12 col-md-10 col-md-offset-1 ">
-            <div class="col-xs-12 col-md-6">
-                <div id="free" class="col-xs-12  pull-left features">
+    <div class="row" id="features">
+        <div class="container">
+            <h2 class="text-center">Features</h2>
+            <div class="row">
+                <div class="col-xs-12 col-md-6">
                     <img src="images/features/free.png" class="pull-left">
-                    <h3 class="feats">It’s free</h3>
-                    <p class="whiteFeats">With Scripler it‘s free to make ebooks. As in - it does not cost a thing. There are premium plans if you need more cloud storage, premium designs or if you want to make custom book-templates.</p>
+                    <h3>It’s free</h3>
+                    <p>With Scripler it‘s free to make ebooks. As in - it does not cost a thing. There are premium plans if you need more cloud storage, premium designs or if you want to make custom book-templates.</p>
                 </div>
-                <div id="functional" class="col-xs-12 pull-left features">
-                    <img src="images/features/ebook.png" class="pull-left">
-                    <h3 class="feats">Fully functional ebooks</h3>
-                    <p class="whiteFeats">Scripler makes ebooks in EPUB format, the definitive international and open standard for ebooks. Easily insert frontmatter, backmatter and metadata. All elements are designed for the book-template you currently use.</p>
-                </div>
-                <div id="import" class="col-xs-12  pull-left features">
-                    <img src="images/features/import.png" class="pull-left">
-                    <h3 class="feats">Import</h3>
-                    <p class="whiteFeats">Import your manuscript from Word. Just upload it and Scripler will convert it to a well-formatted book project, ready for polishing and final book production.</p>
+                <div class="col-xs-12 col-md-6">
+                    <img src="images/features/many.png" class="pull-right-on-big-screen">
+                    <h3>Make as many books you like</h3>
+                    <p>No limit on the number of books you can make. Make 1000 books consisting only of a poem each. Make serial fiction and publish each chapter as an ebook or collect your creations in vast works of literature. Just experiment, go wild.</p>
                 </div>
             </div>
-            <div class="col-xs-12 col-md-6  ">
-                <div id="many" class="col-xs-12  pull-right features">
-                    <img src="images/features/many.png" class="pull-right-on-big-screen">
-                    <h3 class="feats">Make as many books you like</h3>
-                    <p class="whiteFeats">No limit on the number of books you can make. Make 1000 books consisting only of a poem each. Make serial fiction and publish each chapter as an ebook or collect your creations in vast works of literature. Just experiment, go wild.</p>
+            <div class="row">
+                <div class="col-xs-12 col-md-6">
+                    <img src="images/features/ebook.png" class="pull-left">
+                    <h3>Fully functional ebooks</h3>
+                    <p>Scripler makes ebooks in EPUB format, the definitive international and open standard for ebooks. Easily insert frontmatter, backmatter and metadata. All elements are designed for the book-template you currently use.</p>
                 </div>
-                <div id="rogd" class="col-xs-12  pull-right features">
+                <div class="col-xs-12 col-md-6">
                     <img src="images/features/togd.png" class="pull-right-on-big-screen">
                     <h3 class="feats">Great typography and design</h3>
-                    <p class="whiteFeats">Make professionally designed typography with Scripler’s book-templates. You’ll have a wide selection of great fonts and full control of the typography. Easily insert images and figures.</p>
+                    <p>Make professionally designed typography with Scripler’s book-templates. You’ll have a wide selection of great fonts and full control of the typography. Easily insert images and figures.</p>
                 </div>
-                <div id="premium" class="col-xs-12  pull-right features">
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-md-6">
+                    <img src="images/features/import.png" class="pull-left">
+                    <h3>Import</h3>
+                    <p>Import your manuscript from Word. Just upload it and Scripler will convert it to a well-formatted book project, ready for polishing and final book production.</p>
+                </div>
+                <div class="col-xs-12 col-md-6">
                     <img src="images/features/premium.png" class="pull-right-on-big-screen">
-                    <h3 class="feats">Premium subscription for heavy users and professionals</h3>
-                    <p class="whiteFeats">As a premium subscriber you’ll have a wider range of professionally designed book-templates to choose from, more space for more books, as well as the ability to easily create and control your own custom book-templates.</p>
+                    <h3>Premium subscription for heavy users and professionals</h3>
+                    <p>As a premium subscriber you’ll have a wider range of professionally designed book-templates to choose from, more space for more books, as well as the ability to easily create and control your own custom book-templates.</p>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="row page" id="about">
-        <h2 class="col-xs-12 col-md-10 col-md-offset-1 text-center about about-scripler">About</h2>
-        <h3 class="col-xs-12 text-center" >Scripler will make the ebook revolution accessible to anyone who has something to say.</h3>
-        <h3 class="col-xs-12 text-center about-scripler">The Scripler Team</h3>
-        <div class="col-xs-12 col-md-6 col-md-offset-3">
-            <div class="col-xs-12 col-md-6 pers">
-                <a class="person" href="mailto:david@scripler.com" class="email-text">David Walther Birk</a>, Project Lead<br />
-                Is actually an archaeologist!
+    <div class="row" id="about">
+        <div class="container">
+            <h2 class="text-center">About</h2>
+            <h4 class="text-center">Scripler will make the ebook revolution accessible to anyone who has something to say.</h4>
+            <div class="row">
+                <p>&nbsp;</p>
             </div>
-            <div class=" col-xs-12 col-md-6 pers">
-                <a class="person" href="mailto:morten@scripler.com" class="email-text">Morten Garbøl Franck</a>, Developer<br />
-                Is addicted to:<br />
-                <ul><li>Lists</li></ul>
+            <h4 class="text-center text-color-black">The Scripler Team</h4>
+
+            <div class="row">
+                <p>&nbsp;</p>
             </div>
-            <div class=" col-xs-12 col-md-6 pers">
-                <a class="person" href="mailto:sofie@scripler.com" class="email-text">Sofie Marie Ottsen</a>, Communications<br />
-                Plays the saxophone (really poorly).
+            <div class="row">
+                <div class="col-xs-12 col-sm-4 col-sm-offset-2">
+                    <a href="mailto:david@scripler.com">David Walther Birk</a>, Project Lead<br />
+                    Is actually an archaeologist!
+                </div>
+                <div class="hidden-sm hidden-md hidden-lg">
+                    <p>&nbsp;</p>
+                </div>
+                <div class="col-xs-12 col-sm-4">
+                    <a href="mailto:morten@scripler.com">Morten Garbøl Franck</a>, Developer<br />
+                    Is addicted to:<br />
+                    <ul><li>Lists</li></ul>
+                </div>
             </div>
-            <div class=" col-xs-12 col-md-6 pers">
-                <a  class="person" href="mailto:kaspar@scripler.com" class="email-text">Kaspar Sivertsen</a>, Graphic designer<br />
-                Has no special characteristics whatsoever.
+            <div class="row">
+                <p>&nbsp;</p>
             </div>
-            <div class=" col-xs-12 col-md-6 pers">
-                <a  class="person" href="mailto:roxana@scripler.com" class="email-text">Roxana Dobre</a>, Developer<br />
-                Is addicted to cinnamon and collects lamb-toys.
+            <div class="row">
+                <div class="col-xs-12 col-sm-4 col-sm-offset-2">
+                    <a href="mailto:sofie@scripler.com">Sofie Marie Ottsen</a>, Communications<br />
+                    Plays the saxophone (really poorly).
+                </div>
+                <div class="hidden-sm hidden-md hidden-lg">
+                    <p>&nbsp;</p>
+                </div>
+                <div class=" col-xs-12 col-sm-4">
+                    <a href="mailto:kaspar@scripler.com">Kaspar Sivertsen</a>, Graphic designer<br />
+                    Has no special characteristics whatsoever.
+                </div>
             </div>
-            <div class=" col-xs-12 col-md-6 pers">
-                <a class="person" href="mailto:allan@scripler.com" class="email-text">Allan Mørk Christensen</a>, Developer<br />
-                Solves the Rubik’s Cube (very slowly).
+            <div class="row">
+                <p>&nbsp;</p>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-4 col-sm-offset-2">
+                    <a href="mailto:roxana@scripler.com">Roxana Dobre</a>, Developer<br />
+                    Is addicted to cinnamon and collects lamb-toys.
+                </div>
+                <div class="hidden-sm hidden-md hidden-lg">
+                    <p>&nbsp;</p>
+                </div>
+                <div class=" col-xs-12 col-sm-4">
+                    <a href="mailto:allan@scripler.com">Allan Mørk Christensen</a>, Developer<br />
+                    Solves the Rubik’s Cube (very slowly).
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="row page" id="contact">
-        <div class="col-xs-12 col-md-4 cont">
-            <h2 class="col-xs-12 text-center con">Contact</h2>
-            <h3  class="col-xs-12 text-center con">Ask us anything (about Scripler)</h3>
-            <p class="text-center"><a class="person" href="mailto:david@scripler.com">David Walther Birk,  </a>Project Leader </p>
-            <h3  class="col-xs-12 text-center con">Find us</h3>
+    <div class="row" id="contact">
+        <div class="col-xs-12 col-md-4 left-column">
+            <h3 class="text-center">Contact</h2>
+            <h4 class="text-center">Ask us anything (about Scripler)</h3>
+            <p class="text-center"><a href="mailto:david@scripler.com">David Walther Birk,  </a>Project Leader</p>
+            <div class="row">
+                <p>&nbsp;</p>
+            </div>
+            <h4 class="text-center">Find us</h3>
             <p class="text-center">Scripler</p>
             <p class="text-center">Danneskiold-Samsøes Alle 41</p>
             <p class="text-center">1434 København K</p>
-            <h3  class="col-xs-12 text-center con">Press and media</h3>
-            <a class="person text-center center-block" href="mailto:sofie@scripler.com"  >Sofie Marie Ottsen</a>
-            <h3  class="col-xs-12 text-center con">Stay informed</h3>
+            <div class="row">
+                <p>&nbsp;</p>
+            </div>
+            <h4 class="text-center">Press and media</h3>
+            <p class="text-center"><a href="mailto:sofie@scripler.com">Sofie Marie Ottsen</a>
+            <div class="row">
+                <p>&nbsp;</p>
+            </div>
+            <h4 class="text-center">Stay informed</h3>
             <p>Sign up for our newsletter and you'll get a selection of interesting news from the frontiers of digital publishing and updates on what we’re currently working on at Scripler.</p>
 
             <div id="mc_embed_signup">
@@ -210,7 +251,6 @@
                 <a class="socialicon" href="auth/linkedin"><span class="icon-linkedin"></span></a>
                 <a class="socialicon"href="auth/google"><span class="icon-google-plus"></span></a>
             </div>
-
         </div>
 
         <iframe id="map_canvas1" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3767.565717788916!2d12.60372839999965!3d55.68054211484804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253256f012ff3%3A0x680b1b05dd2d97d5!2sDanneskiold-Sams%C3%B8es+All%C3%A9+41%2C+1434+K%C3%B8benhavn+K!5e1!3m2!1sen!2sdk!4v1427283539148" style="pointer-events:none" frameborder="0" style="border:0"></iframe>
