left aligning headers and text, it looks better that way

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
                 </div>
             </div>
         </form>
-        <div class="socialicons col-xs-12 col-md-2 clearfix text-center center-block">
+        <div class="col-xs-12 col-md-2 clearfix">
             <a class="socialicon" href="auth/facebook"><span class="icon-facebook"></span></a>
             <a class="socialicon" href="auth/linkedin"><span class="icon-linkedin"></span></a>
             <a class="socialicon"href="auth/google"><span class="icon-google-plus"></span></a>
@@ -105,7 +105,7 @@
     </div>
     <div class="row" id="features">
         <div class="container">
-            <h2 class="text-center">Features</h2>
+            <h2>Features</h2>
             <div class="row">
                 <div class="col-xs-12 col-md-6">
                     <img src="images/features/free.png" class="pull-left">
@@ -147,8 +147,8 @@
 
     <div class="row" id="about">
         <div class="container">
-            <h2 class="text-center">About</h2>
-            <h4 class="text-center">Scripler will make the ebook revolution accessible to anyone who has something to say.</h4>
+            <h2>About</h2>
+            <h4>Scripler will make the ebook revolution accessible to anyone who has something to say.</h4>
             <div class="row">
                 <p>&nbsp;</p>
             </div>
@@ -208,25 +208,25 @@
 
     <div class="row" id="contact">
         <div class="col-xs-12 col-md-4 left-column">
-            <h3 class="text-center">Contact</h2>
-            <h4 class="text-center">Ask us anything (about Scripler)</h3>
-            <p class="text-center"><a href="mailto:david@scripler.com">David Walther Birk,  </a>Project Leader</p>
+            <h3>Contact</h2>
+            <h4>Ask us anything (about Scripler)</h3>
+            <p><a href="mailto:david@scripler.com">David Walther Birk,  </a>Project Leader</p>
             <div class="row">
                 <p>&nbsp;</p>
             </div>
-            <h4 class="text-center">Find us</h3>
-            <p class="text-center">Scripler</p>
-            <p class="text-center">Danneskiold-Samsøes Alle 41</p>
-            <p class="text-center">1434 København K</p>
+            <h4>Find us</h3>
+            <p>Scripler</p>
+            <p>Danneskiold-Samsøes Alle 41</p>
+            <p>1434 København K</p>
             <div class="row">
                 <p>&nbsp;</p>
             </div>
-            <h4 class="text-center">Press and media</h3>
-            <p class="text-center"><a href="mailto:sofie@scripler.com">Sofie Marie Ottsen</a>
+            <h4>Press and media</h3>
+            <p><a href="mailto:sofie@scripler.com">Sofie Marie Ottsen</a>
             <div class="row">
                 <p>&nbsp;</p>
             </div>
-            <h4 class="text-center">Stay informed</h3>
+            <h4>Stay informed</h3>
             <p>Sign up for our newsletter and you'll get a selection of interesting news from the frontiers of digital publishing and updates on what we’re currently working on at Scripler.</p>
 
             <div id="mc_embed_signup">
@@ -245,8 +245,12 @@
                     </div>
                 </form>
             </div>
-            <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-            <div class="socialicons col-xs-12 clearfix text-center center-block">
+            <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);
+            </script>
+            <div class="row">
+                <p>&nbsp;</p>
+            </div>
+            <div>
                 <a class="socialicon" href="auth/facebook"><span class="icon-facebook"></span></a>
                 <a class="socialicon" href="auth/linkedin"><span class="icon-linkedin"></span></a>
                 <a class="socialicon"href="auth/google"><span class="icon-google-plus"></span></a>
