brush up validation messages

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -138,13 +138,13 @@
 						</span>
 						<div role="alert">
 							<span class="nameError urlError" ng-show="insertHyperlinks.targetURL.$error.pattern && !insertHyperlinks.targetURL.$pristine">Not a valid URL!</span>
-							<span class="nameError urlError" ng-show="insertHyperlinks.targetURL.$error.required && insertHyperlinks.targetURL.$dirty && !insertHyperlinks.targetURL.$touched">URL target missing!</span>
+							<span class="nameError urlError" ng-show="insertHyperlinks.targetURL.$error.required && !insertHyperlinks.targetURL.$pristine">URL target missing!</span>
 						</div>
 						<span class="menu-box inputfield margin-top">
 							<input id="hyperlinkInputBox" name="textURL" type="text" data-ng-model="linkText" placeholder="Text" ng-minlength="1" ng-required="true" required>
 						</span>
 						<div role="alert">
-							<span class="nameError urlError" ng-show="insertHyperlinks.textURL.$error.required && insertHyperlinks.textURL.$dirty && !insertHyperlinks.textURL.$touched">Hyperlink text missing!</span>
+							<span class="nameError urlError" ng-show="insertHyperlinks.textURL.$error.required && insertHyperlinks.textURL.$dirty">Hyperlink text missing!</span>
 						</div>
 						<span class="menu-box inputfield margin-top">
 							<select data-ng-model="linkAnchor" data-ng-options="anchor.text for anchor in toc">
