brushing up 'Talk!' and 'Blog' buttons on the ebook space

--- a/public/create/pages/create.html
+++ b/public/create/pages/create.html
@@ -104,10 +104,10 @@
 			</div>
 
 			<div class="btn-top blog">
-				<a href="http://blog.scripler.com/">Blog</a>
+				<a target="_blank" href="http://blog.scripler.com/">Blog</a>
 			</div>
 			<div class="btn-top feedback">
-				<a href="http://talk.scripler.com/">Talk!</a>
+				<a target="_blank" href="http://talk.scripler.com/">Talk!</a>
 			</div>
 		</div>
 	</section>
